<resources>
    <string name="app_name">ASD Helper</string>
    <string name="action_settings">Settings</string>
    <string name="btnTimerText">Timers</string>
    <string name="btnIncidentText">Incident Tracker</string>
    <string name="btnHistoryText">History</string>
    <string name="lblTimerHeading">Visual Timer Setup</string>
    <string name="lblTimerLngth">Timer Length :</string>
    <string name="lblSeconds">S</string>
    <string name="lblMinutes">M</string>
    <string name="lblHours">H</string>
    <string name="lblTheme">Select Theme :</string>
    <string name="lblSoundText">Sound :</string>
    <string name="radOnText">On</string>
    <string name="radOffText">Off</string>
    <string name="lblSleepableText">Let Device Sleep :</string>
    <string name="radYesText">Yes</string>
    <string name="radNoText">No</string>
    <string name="btnStartText">Start</string>
    <string name="lblIncidentTrackerText">Incident Tracker</string>
    <string name="btnIncidentStart">Start</string>
    <string name="btnIncidentStop">Stop</string>
    <string name="btnSaveText">Save Incident</string>
    <string name="btnViewHistoryText">View History</string>
    <string name="lblIncidentText">Incident</string>
    <string name="chkIncidentText">New</string>
    <string name="lblPrecidentText">Precident</string>
    <string name="chkPrecidentText">New</string>
    <string name="lblResolutionText">Resolution</string>
    <string name="chkResolutionText">New</string>
    <string name="lblMoodAfterText">Mood After</string>
    <string name="chkMoodAfterText">New</string>

    <string-array name="themeSpinner">
        <item>Fairy</item>
        <item>Pirate Ship</item>
        <item>Space Ship</item>
        <item>Unicorn</item>
    </string-array>
    <string name="title_activity_activity_maps">Map</string>
</resources>
