<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/ddlTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblTimerHeading"
        android:id="@+id/lblTimerSetup"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/headingTextSize"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblTimerLngth"
        android:id="@+id/lblTimerLength"
        android:textSize="@dimen/inputLblTextSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/npHours" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/npHours"
        android:layout_below="@+id/lblTimerSetup"
        android:layout_toRightOf="@+id/lblTimerLength"
        android:layout_toEndOf="@+id/lblTimerLength" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/npMinutes"
        android:layout_below="@+id/lblTimerSetup"
        android:layout_toRightOf="@+id/npHours"
        android:layout_toEndOf="@+id/npHours" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/npSeconds"
        android:layout_below="@+id/lblTimerSetup"
        android:layout_toRightOf="@+id/npMinutes"
        android:layout_toEndOf="@+id/npMinutes" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/lblH"
        android:layout_below="@+id/npHours"
        android:layout_centerHorizontal="true"
        android:layout_alignRight="@+id/npHours"
        android:text="@string/lblHours"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblMinutes"
        android:id="@+id/lblM"
        android:layout_alignEnd="@+id/npMinutes"
        android:layout_below="@+id/npSeconds"
        android:layout_toLeftOf="@+id/npSeconds"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblSeconds"
        android:id="@+id/lblS"
        android:layout_below="@+id/npSeconds"
        android:layout_alignEnd="@id/npSeconds"
        android:layout_toLeftOf="@+id/npSeconds"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblTheme"
        android:id="@+id/lblTheme"
        android:layout_below="@+id/lblH"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/inputLblTextSize"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblSoundText"
        android:id="@+id/lblSound"
        android:layout_below="@+id/lblTheme"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:textSize="@dimen/inputLblTextSize" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radOnText"
        android:id="@+id/radOn"
        android:layout_alignTop="@+id/lblSound"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/radYes" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radOffText"
        android:id="@+id/radOff"
        android:layout_alignTop="@+id/lblSound"
        android:layout_alignRight="@+id/npSeconds"
        android:layout_alignLeft="@+id/radNo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblSleepableText"
        android:id="@+id/lblSleepable"
        android:layout_below="@+id/radOn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp"
        android:textSize="@dimen/inputLblTextSize" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radYesText"
        android:id="@+id/radYes"
        android:layout_alignTop="@+id/lblSleepable"
        android:layout_toRightOf="@+id/lblSleepable"
        android:layout_toEndOf="@+id/lblSleepable" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radNoText"
        android:id="@+id/radNo"
        android:layout_alignTop="@+id/radYes"
        android:layout_toRightOf="@+id/lblM"
        android:layout_toEndOf="@+id/lblM" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStartText"
        android:id="@+id/btnStartTimer"
        android:textSize="@dimen/headingTextSize"
        android:background="#ff00ff00"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:minWidth="200dp"
        android:minHeight="75dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignTop="@+id/lblTheme"
        android:layout_alignLeft="@+id/radOn"
        android:layout_alignStart="@+id/radOn" />

</RelativeLayout>
