<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ff000000">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnTimer"
        android:longClickable="true"
        android:contentDescription="@string/btnTimerText"
        android:src="@drawable/timers"
        android:layout_above="@+id/btnIncident"
        android:layout_alignLeft="@+id/btnIncident"
        android:layout_alignStart="@+id/btnIncident" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnIncident"
        android:src="@drawable/incidents"
        android:contentDescription="@string/btnIncidentText"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/btnHistory"
        android:layout_alignStart="@+id/btnHistory" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnHistory"
        android:src="@drawable/history"
        android:layout_below="@+id/btnIncident"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/btnHistoryText" />
</RelativeLayout>
